ocaml/testsuite/tests/templates/basic/bad_param_not_param.reference
File "bad_param_not_param.mli", line 1:
Error: The module "Widget" is specified as a parameter, but "widget.cmi"
       was not compiled with -as-parameter.
